| Summary: | ASTERISK-26629: tests/manager: 4 test failures as a result of iostream change | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2016-11-28 09:21:34.000-0600 | Date Closed: | 2016-12-07 13:37:57.000-0600 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Core/ManagerInterface | ||
| Versions: | Frequency of Occurrence | ||||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | As is visible at https://jenkins.asterisk.org/jenkins/job/periodic-asterisk-master/411/testReport the merging of iostream has resulted in a few of the manager tests failing. I haven't been able to figure out precisely why. | ||||
| Comments: | By: Mark Michelson (mmichelson) 2016-12-01 17:25:10.608-0600 https://gerrit.asterisk.org/#/c/4551/ fixes at least two of the four failures. I couldn't run the failing Lua test because asttest was being a jerk and not running properly. The change *may* have also fixed that test, but it seems unlikely. The AMI advanced config test is currently failing apparently because there are extra whitespace characters after "No Categories Found" in the HTTP payload of one of the responses from Asterisk. Python's strip() and rstrip() methods don't seem to be capable of stripping these off for some reason, and so I currently have not figured out how to get that test to pass. By: Friendly Automation (friendly-automation) 2016-12-07 13:37:58.564-0600 Change 4556 merged by Joshua Colp: Iostreams: Correct off-by-one error. [https://gerrit.asterisk.org/4556|https://gerrit.asterisk.org/4556] By: Friendly Automation (friendly-automation) 2016-12-07 13:38:07.070-0600 Change 4551 merged by Joshua Colp: http: Send headers and body in one write. [https://gerrit.asterisk.org/4551|https://gerrit.asterisk.org/4551] | ||||